test: 설계영역 선후수 검사 단위테스트 추가
- 성공/실패 케이스 추가